API 1711 observaton token search now correctly process explicit systems with no value (#568)